@@ -1,5 +1,8 @@
 master
 
+- Mayhem
+  Add quick [code] tags keybind (alt+c).
+
 2.30.4
 - Mayhem
   Add /co/ and /k/ archive redirection.
